update the save availabilities and test